fixed z-index bugs

--- a/app/assets/stylesheets/layouts/application_layout.css.scss
+++ b/app/assets/stylesheets/layouts/application_layout.css.scss
@@ -14,7 +14,7 @@ div#page_content
       display:none;
       width: 100%;
       text-align: center;
-      z-index: 100;
+      z-index: 1;
       margin-left: 15px;
       
       .notice
