--- a/app/assets/stylesheets/modules/follow_buttons.css.scss
+++ b/app/assets/stylesheets/modules/follow_buttons.css.scss
@@ -7,7 +7,7 @@
   top: -10px;
   right: 0px;
   height: 20px;
-  z-index: 100;
+  z-index: 1;
   
   form
   {
@@ -26,7 +26,7 @@
 .myFanzone
 {
   position: absolute;
-  z-index: 100;
+  z-index: 1;
   width:0px;
   height:0px;
   margin:0px;
