--- a/app/assets/stylesheets/modules/media_slider.css.scss
+++ b/app/assets/stylesheets/modules/media_slider.css.scss
@@ -33,7 +33,7 @@ div#myMediaSlider
       margin:0px;
       -webkit-background-clip: padding-box; /* for Safari */
       background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
-      z-index: 100;
+      z-index: 1;
       border-top: transparent solid 30px;
       border-bottom: transparent solid 30px;
     }
